--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,9 @@
       {
         "document-title": "off"
       }
-    ]
+    ],
+    "axe/language": "off",
+    "meta-viewport": "off",
+    "meta-charset-utf-8": "off"
   }
 }
