--- a/.hintrc
+++ b/.hintrc
@@ -11,6 +11,13 @@
     ],
     "axe/language": "off",
     "meta-viewport": "off",
-    "meta-charset-utf-8": "off"
+    "meta-charset-utf-8": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ],
+    "button-type": "off"
   }
 }
